--- a/dark.css
+++ b/dark.css
@@ -14,6 +14,18 @@ body {
         "Segoe UI Emoji",
         "Segoe UI Symbol";
     color-scheme: dark;
+    max-width: 1012px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#tabList {
+    display: inline;
+}
+
+#tabList a {
+    font-size: 2em;
+    margin-right: 20px;
 }
 
 h1,
@@ -27,10 +39,7 @@ h6 {
 }
 
 #content {
-    max-width: 1012px;
     word-wrap: break-word;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 * {
